<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.lastaflute</groupId>
	<artifactId>lasta-di</artifactId>
	<version>0.6.3</version>
	<packaging>jar</packaging>

	<name>Lasta Di</name>
	<description>DI Container for LastaFlute, super forked from Seasar as Java8</description>
	<url>https://github.com/lastaflute/lasta-di</url>
	<inceptionYear>2015</inceptionYear>

	<properties>
		<javassist.version>3.20.0-GA</javassist.version>
		<jta.version>1.2</jta.version>
		<slf4j.version>1.7.12</slf4j.version>
	</properties>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<organization>
		<name>The DBFlute Project</name>
		<url>http://dbflute.org/</url>
	</organization>

	<developers>
		<developer>
			<id>jflute</id>
			<timezone>+9</timezone>
		</developer>
	</developers>

	<issueManagement>
		<system>Github</system>
		<url>https://github.com/lastaflute/lasta-di/issues</url>
	</issueManagement>
	<mailingLists>
		<mailingList>
			<name>DBFlute-users</name>
			<subscribe>https://groups.google.com/forum/#!forum/dbflute</subscribe>
			<unsubscribe>https://groups.google.com/forum/#!forum/dbflute</unsubscribe>
			<post>dbflute@googlegroups.com</post>
			<archive>https://groups.google.com/forum/#!forum/dbflute</archive>
		</mailingList>
	</mailingLists>

	<scm>
		<connection>scm:git:git@github.com:lastaflute/lasta-di.git</connection>
		<developerConnection>scm:git:git@github.com:lastaflute/lasta-di.git</developerConnection>
		<url>git@github.com:lastaflute/lasta-di.git</url>
	</scm>

	<parent>
		<!-- http://repo.maven.apache.org/maven2/org/sonatype/oss/oss-parent/9/oss-parent-9.pom -->
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>9</version>
	</parent>

	<build>
		<defaultGoal>validate</defaultGoal>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<configuration>
						<updateReleaseInfo>true</updateReleaseInfo>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<configuration>
						<locales>en,ja</locales>
						<inputEncoding>UTF-8</inputEncoding>
						<outputEncoding>UTF-8</outputEncoding>
					</configuration>
				</plugin>
				<!-- to avoid warning 'maven-enforcer-plugin (goal "enforce") is ignored by m2e' -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
                        				<artifactId>maven-enforcer-plugin</artifactId>
                        				<versionRange>[1.0.0,)</versionRange>
                        				<goals>
                           					<goal>enforce</goal>
                        				</goals>
                    				</pluginExecutionFilter>
                    				<action><ignore /></action>
                				</pluginExecution>
                			</pluginExecutions>
                		</lifecycleMappingMetadata>
                	</configuration>
                </plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.2</version>
				<executions>
					<execution>
						<id>source-jar</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.1</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<docencoding>UTF-8</docencoding>
					<charset>UTF-8</charset>
					<!-- you can avoid self-closing check e.g. br-tag (checked since java8) -->
					<!-- fixed but comment-out for emergency deploy -->
					<additionalparam>-Xdoclint:none</additionalparam>
				</configuration>
				<executions>
					<execution>
						<id>javadoc-jar</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
					<execution>
						<phase>site</phase>
						<goals>
							<goal>javadoc</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!--
			 'xxx.jar.asc' file can be created by this plug-in
			 you can deploy by 'mvn -e clean deploy -Dgpg.keyname=xxx -Dgpg.passphrase="xxx"'
			 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.5</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
		</plugins>
	</build>

	<dependencies>
		<!-- = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = -->
		<!--                                                                Main Framework -->
		<!--                                                                 = = = = = = = -->
		<!-- class enhance -->
		<dependency>
		    <groupId>org.javassist</groupId>
		    <artifactId>javassist</artifactId>
		    <version>${javassist.version}</version>
		</dependency>
		<!-- java transaction -->
		<dependency>
			<groupId>javax.transaction</groupId>
			<artifactId>javax.transaction-api</artifactId>
			<version>${jta.version}</version>
			<scope>provided</scope>
		</dependency>
		<!-- logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<!-- = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = -->
		<!--                                                                       Testing -->
		<!--                                                                       = = = = -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.2</version> <!-- is latest version without hamcrest -->
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.1.3</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
